# Coursework_6

./: .env.sample  README.md  data.json  groups.json  manage.py  pyproject.toml
Coursework_6/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
mailing_service/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing_service/management/commands/: start_mailing.py
mailing_service/migrations/: 0001_initial.py  0002_alter_mailing_clients.py  0003_alter_mailing_options_client_is_blocked.py  0004_alter_mailing_options.py  0005_mailing_owner.py  0006_remove_client_is_blocked_client_owner.py  0007_message_owner.py
mailing_service/templates/mailing_service/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing_service/templates/mailing_service/includes/: inc_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  user_form.html  user_list.html
