[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Nikita-Musk <nik52119w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
psycopg2-binary = "^2.9.9"
ipython = "^8.27.0"
black = "^24.8.0"
redis = "^5.0.8"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
apscheduler = "^3.10.4"
django-stubs = "^5.1.0"
django-mailing = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
